<resources>
    <string name="app_name">chat_Trabajo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Inicia Sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="register">Register</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">¿Aún no tienes cuenta? Regístrate</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="iniciar_sesion_con_google">Iniciar Sesion con Google</string>
    <string name="introduzca_su_email">Introduzca su Email:</string>
    <string name="introduzca_su_contrase_a">Introduzca su Contraseña:</string>
    <string name="vuelva_a_introducir_su_contrase_a">Vuelva a introducir su Contraseña:</string>
    <string name="cliente_is">1054010606330-u95brmpr3qeju47ijum60049q6lei24e.apps.googleusercontent.com</string>
    <string name="meeting_id">Meeting ID:</string>
    <string name="join">Join</string>
    <string name="enter_meeting_id">Introduce el ID</string>
    <string name="join_meeting">Entrar en la Videollamada</string>
</resources>