<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25sp"
    android:background="@color/blanco"
    tools:context=".Login.LoginActivity">


    <TextView
        android:text="¡Bienvenido!"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/descarga" />

    <TextView
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"

        android:text="Iniciar Sesion"
        android:theme="@style/FirebaseUI.PrivacyFooter" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_Google"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:text="@string/iniciar_sesion_con_google"
        android:theme="@style/FirebaseUI.PrivacyFooter" />


    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:id="@+id/RegisterNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:id="@+id/passwordForget"
        android:text="He olvidado mi contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
